--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
     <div class='container'>
         <div class='main'>
             <h3>Congratulations</h3>
-            <h1 class='lead'>Haris and Hafsa<h1>
+            <h1 class='lead'>Haris &amp; Hafsa<h1>
             <h3 class='engaged'>on getting engaged!</h3>
         </div>
 
@@ -30,6 +30,5 @@
         </div>
     </div>
     <script src="https://use.typekit.net/ukb8hia.js"></script>
-    <script>try{Typekit.load({ async: true });}catch(e){}</script>
 </body>
 </html>
